<resources>
    <string name="app_name">Shawerni</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_Wallet">Wallet</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_History">History</string>
    <string name="menu_ConcatUs">Contact us</string>
    <string name="menu_Logout">Logout</string>
    <string name="Welcome">Welcome ..</string>
    <string name="Mainsections">Main sections</string>


    <string name="app_Register">Register</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="Password">ConfirmPassword</string>
    <string name="email">Email</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="date">Date</string>
    <string name="registrer">Registrer</string>
    <string name="dateofbirth">dateOfbirth</string>
    <string name="app_Dateofbirth">Dateofbirth</string>
    <string name="age">Age</string>


    <string name="forget">
        <a href=" https://www.google.com">Forget password</a>
    </string>
    <string name="create">
        <a href=" https://www.google.com">Create account</a>
    </string>
    <string name="Forget_password">Forget Password ?</string>
    <string name="EnterEmail">Enter your Email</string>
    <string name="Language">Language</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="Save">Save</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="Login">Login</string>
    <string name="or">or</string>
    <string name="Legalconsultation">Legal consultation</string>
    <string name="healthconsultation">health consultation</string>
    <string name="Acadamicconsultation">Acadamic consultation</string>
    <string name="Socialconsultation">Social consultation</string>
    <string name="Economicalconsultation">Economical consultation</string>
    <string name="Marketingconsultation">Marketing consultation</string>
    <string name="paidCon">Paid consultation</string>
    <string name="freeCon">Free consultation</string>
    <string name="createACC">Create a new Account</string>


    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No Consultations found!</string>
    <string name="lbl_new_note_title">New Consultation</string>
    <string name="lbl_edit_note_title">Edit Consultation</string>
    <string name="hint_enter_note">Enter your Consultation!</string>
    <string name="regriation_section" translatable="false">Registration type</string>
    <string name="menu_ConReq" translatable="false">Consultations Requests</string>
    <string name="gallery" translatable="false">gallery</string>
    <string name="camera" translatable="false">camera</string>

    <string name="consultantName" translatable="false">Consultant Name</string>
    <string name="dateConsultation" translatable="false">Date</string>
    <string name="timeConsultation" translatable="false">Time</string>
    <string name="reservationWay" translatable="false">Reservation Way</string>
    <string name="paymentInformation" translatable="false">payment Information:</string>
    <string name="transfer" translatable="false">Transfer money to :</string>
    <string name="SA" translatable="false">SA43 8000 0365 6080 1042 4223 </string>
    <string name="accountName" translatable="false">Account Name : shawerni </string>
    <string name="bank" translatable="false">Bank : Al Rajhi Bank</string>
    <string name="paymentImage" translatable="false"> Attach the conversion image </string>
    <string name="payNow" translatable="false"> pay Now </string>
    <string name="BookingInfo" translatable="false"> Booking Information </string>
    <string name="major" translatable="false">major</string>


</resources>
