<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_account_circle_blue_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_Wallet"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/menu_Wallet" />
        <item
            android:id="@+id/nav_History"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_History" />

        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_settings_blue_24dp"
            android:title="@string/menu_Settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_ConcatUs"
                android:title="@string/menu_ConcatUs" />
            <item
                android:id="@+id/nav_Logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/menu_Logout" />
        </menu>
    </item>

</menu>
