<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        //android:background="@drawable/sha2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/E1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="120dp"
                android:layout_marginEnd="120dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="100dp"
                 />

            <EditText
                android:id="@+id/p3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="120dp"
                android:layout_marginEnd="120dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="163dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="120dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="-7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ForgetPass"
                    android:layout_width="47dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:text="@string/forget" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:text="@string/or"
                    android:layout_marginRight="5dp" />

                <TextView
                    android:id="@+id/CreateACC"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create" />
            </LinearLayout>

            <Button
                android:id="@+id/b1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-140dp"
                android:layout_gravity="center"
                android:text="@string/Login"
                android:background="@drawable/border"
                android:textColor="@color/white"/>



        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>