<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingConstraints">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/untitleddesign"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/BookingInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="20"
                android:gravity="center"
                android:text="@string/BookingInfo"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@android:color/holo_blue_dark" />

            <View
                android:id="@+id/divider1"
                android:layout_width="170dp"
                android:layout_height="2dp"
                android:layout_marginTop="1dp"
                android:background="#344354"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/userName"
                android:layout_width="39dp"
                android:layout_height="35dp"
                android:background="@drawable/iconaccount"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="320dp" />

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="12"
                android:gravity="left"
                android:text="@string/username"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/email"
                android:layout_width="39dp"
                android:layout_height="35dp"
                android:background="@drawable/iconemail"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="360dp" />

            <TextView
                android:id="@+id/eEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:ems="12"
                android:gravity="left"
                android:inputType="textEmailAddress"
                android:text="@string/email"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/consultant"
                android:layout_width="39dp"
                android:layout_height="35dp"
                android:background="@drawable/iconaccount"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="360dp" />

            <TextView
                android:id="@+id/consultantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="12"
                android:gravity="left"
                android:text="@string/consultantName"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/date"
                android:layout_width="38dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_date_range_black_24dp" />

            <TextView
                android:id="@+id/dateConsultation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="12"
                android:gravity="left"
                android:text="@string/date"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/timeCon"
                android:layout_width="38dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_access_time_black_24dp" />

            <TextView
                android:id="@+id/timeConsultation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="12"
                android:gravity="left"
                android:text="@string/timeConsultation"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/reservationWay"
                android:layout_width="38dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_access_time_black_24dp" />

            <TextView
                android:id="@+id/reservationType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="12"
                android:gravity="left"
                android:text="@string/reservationWay"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:layout_marginTop="10dp"
            android:background="#344354" />


        <LinearLayout
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/paymentInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="14"
                android:gravity="left"
                android:text="@string/paymentInformation"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="14"
                android:gravity="left"
                android:text="@string/transfer"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/SA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="14"
                android:gravity="left"
                android:text="@string/SA"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/accountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="14"
                android:gravity="left"
                android:text="@string/accountName"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="14"
                android:gravity="left"
                android:text="@string/bank"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/paymentImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableTint="#858687"
                android:text="@string/paymentImage"
                android:textColor="@color/colorPrimary" />

            <ImageView
                android:id="@+id/cv_image"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:background="@drawable/ic_attach_file_black_24dp"
                android:gravity="left"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="130dp" />

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:radius="1dp"
            android:text="@string/payNow"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>

