<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/untitleddesign"


        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="horizontal"
            android:layout_gravity="center">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="39dp"
                android:layout_height="35dp"
                android:background="@drawable/iconaccount"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="320dp" />

            <EditText
                android:id="@+id/eName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username"
                />

        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="39dp"
                android:layout_height="35dp"
                android:background="@drawable/iconemail"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="360dp" />

            <EditText
                android:id="@+id/eEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />



        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="37dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/iconpassword" />

            <EditText
                android:id="@+id/ePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                />




        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center">


            <ImageView
                android:layout_width="38dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/iconphone" />

            <EditText
                android:id="@+id/ePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phonenumber"
                android:digits="0123456789"
                android:inputType="phone"
                />



        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_date_range_black_24dp" />

            <EditText
                android:id="@+id/eeage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"


                />


        </LinearLayout>



















            <Button
                android:id="@+id/save"
                android:layout_width="115dp"
                android:layout_height="44dp"
                android:background="@drawable/border"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/Save"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="550dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.939"/>













    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>