<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sha2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="270dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/E1ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/p3ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/b1ad"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/border"
                android:text="@string/Login"
                android:textColor="@color/white" />


            <LinearLayout
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="-7dp"
                android:gravity="center"
                android:orientation="vertical">


            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
